--- a/.github/workflows/Merge-upstream.yml
+++ b/.github/workflows/Merge-upstream.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:  
   update-packages:  
-    if: github.event.repository.owner.id == github.event.sender.id || !github.event.sender.id || github.event.sender.id == 71822883  
+    if: github.event.repository.owner.id == github.event.sender.id  
     runs-on: ubuntu-latest  
     strategy:  
       matrix:  
@@ -27,13 +27,13 @@ jobs:
 
     steps:  
       - name: Checkout  
-        uses: actions/checkout@v2  
+        uses: actions/checkout@main  
         with:  
           ref: ${{ matrix.branch }}  
 
-      - uses: de-vri-es/setup-git-credentials@v2  
+      - uses: de-vri-es/setup-git-credentials@main  
         with:  
-          credentials: https://vison-v:${{ secrets.REPO_TOKEN }}@github.com/  
+          credentials: https://somemoo:${{ secrets.REPO_TOKEN }}@github.com/  
     
       - name: Set git identity  
         run: |  
